added travis script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
-cmake_minimum_required (VERSION 3.5)
+#cmake_minimum_required (VERSION 3.5)
+# use older version for travis compat ...
+cmake_minimum_required (VERSION 2.8)
 project (akita)
 
 # find required libs
