--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
+sudo: required
+dist: trusty
+
 # get required libraries
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y libboost-all-dev libsndfile libjack-jack2-dev
+  - sudo apt-get install -y libboost-all-dev libsndfile1-dev libjack-jackd2-dev
 
 # Enable C++ support
 language: cpp
